tests/baselines/reference/staticIndexers.errors.txt
staticIndexers.ts(12,25): error TS2302: Static members cannot reference class type parameters.


==== staticIndexers.ts (1 errors) ====
    // static indexers not allowed
    
    class C {
        static [x: string]: string;
    }
    
    class D {
        static [x: number]: string;
    }
    
    class E<T> {
        static [x: string]: T;
                            ~
!!! error TS2302: Static members cannot reference class type parameters.
    }